Code quality improvements surfaced by IntelliJ.