@@ -1,21 +1,21 @@
 /* ==================================================================
  * LocalizedInvoiceMatchFilterResults.java - 29/05/2018 1:14:28 PM
- * 
+ *
  * Copyright 2018 SolarNetwork.net Dev Team
- * 
- * This program is free software; you can redistribute it and/or 
- * modify it under the terms of the GNU General Public License as 
- * published by the Free Software Foundation; either version 2 of 
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
  * the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, 
- * but WITHOUT ANY WARRANTY; without even the implied warranty of 
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License 
- * along with this program; if not, write to the Free Software 
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
  * 02111-1307 USA
  * ==================================================================
  */
@@ -41,7 +41,7 @@ import net.solarnetwork.dao.FilterResults;
 
 /**
  * Localized version of {@link InvoiceMatchFilterResults}.
- * 
+ *
  * @author matt
  * @version 2.1
  */
@@ -54,12 +54,12 @@ public class LocalizedInvoiceMatchFilterResults
 
 	/**
 	 * Construct with locale.
-	 * 
+	 *
 	 * <p>
 	 * The currency code is taken from the first available invoice, or defaults
 	 * to {@literal NZD}.
 	 * </p>
-	 * 
+	 *
 	 * @param delegate
 	 *        the results
 	 * @param locale
@@ -72,7 +72,7 @@ public class LocalizedInvoiceMatchFilterResults
 
 	/**
 	 * Constructor.
-	 * 
+	 *
 	 * @param delegate
 	 *        the results
 	 * @param locale
@@ -115,8 +115,8 @@ public class LocalizedInvoiceMatchFilterResults
 			if ( item instanceof LocalizedInvoiceMatchInfo ) {
 				return item;
 			}
-			return (InvoiceMatch) new LocalizedInvoiceMatch(item, locale);
-		}).collect(Collectors.toList());
+			return new LocalizedInvoiceMatch(item, locale);
+		}).toList();
 		return new BasicFilterResults<>(list, delegate.getTotalResults(), delegate.getStartingOffset(),
 				delegate.getReturnedResultCount());
 	}
@@ -158,7 +158,7 @@ public class LocalizedInvoiceMatchFilterResults
 
 	/**
 	 * Sum a set of {@code BigDecimal} values.
-	 * 
+	 *
 	 * @param func
 	 *        the method to use that returns the value to sum, e.g.
 	 *        {@code InvoiceMatch::getAmount}
